@@ -7,8 +7,7 @@
 // Url: http://www.ebay.de/itm/New-Mini-2-4-inch-Digital-Time-Day-Calendar-Alarm-Clock-Photo-Frame-POF16-/260883908884?pt=LH_DefaultDomain_0&hash=item3cbde48914#ht_4709wt_1046
 // 
 // The CRCs identify.py detected - in the form "OpenWin CRC", "Init(Tbl) CRC"
-// CRC: 0x174c10b9, 0xfbed1394
-// CRC: 0x334bfc75, 0x30149543
+// CRC: 0x334bfc75, 0x30149543, 1, 1
 //
 // 
 #define LCD_WIDTH  320L
